    - added ignore-time-conflict when calling gpg (thanks to
      Evan)
  * utils/demoted.cfg, DistUpgrade/mirrors.cfg, 
    DistUpgrade/ReleaseAnnouncement:
    - updated for current gutsy 
  * DistUpgrade/DistUpgrade.cfg:
    - mark desktop-effects as obsolete on ubuntu-desktop upgrades
      (the appearance capplet replaces it)
    - mark evms as obsolete if it is not in use
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Jul 2007 10:57:02 +0100

update-manager (1:0.65) gutsy; urgency=low

  * debian/rules:
    - add test for fetching the upgrader to release to
      arch-build target
  * update-manager.py:
    - fix breakage in "partial upgrade" mode

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 25 Jun 2007 12:19:59 +0200

update-manager (1:0.64) gutsy; urgency=low

  * UpdateManager/DistUpgradeFetcher.py:
    - add missing "import os"
  * update-manager.py:
    - fix incorrect STEP_FETCH_INSTALL import (Fixes LP:#120484)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Jun 2007 11:49:28 +0200

update-manager (1:0.63) gutsy; urgency=low

  * fix i18n issue (Fixes LP:#114207)
  * DistUpgrade/DistUpgradeCache.py:
    - if "386" (UP) kernel is installed on SMP machine, automatically 
      switch to SMP kernel (Fixes LP: #106387)
  * DistUpgrade/DistUpgrade.cfg:
    - set python2.3 to remove list to ensure smooth upgrade 
      (Fixes LP: #108147)
  * DistUpgrade/DistUpgradeControler.py:
    - show total needed space in not-enough-free-space message
      (Fixes LP: #46775)
    - fix in snapshot feature (Fixes LP: #108413)
    - deal better with very slow downloads (disable cache cleanup)
    - improve free space calculation in /boot (Fixes LP: #116163, #104337)
    - implement SystemCleanup spec kernel removal
    - implement SystemCleanup spec unused dependencies removal
  * Separate downloading and upgrading (Fixes LP: #91978)
  * Show demotions before runing the upgrade (Fixes LP: #91998)
  * UpdateManager/UpdateManager.py: