@@ -17,6 +17,7 @@ update-manager (1:0.66) gutsy; urgency=low
     - mark desktop-effects as obsolete on ubuntu-desktop upgrades
       (the appearance capplet replaces it)
     - mark evms as obsolete if it is not in use
+    - transition powerpc users to ports.ubuntu.com
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Jul 2007 10:57:02 +0100
 
